changed /app to  /

--- a/web/svelte-app/index.html
+++ b/web/svelte-app/index.html
@@ -2,28 +2,27 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/app/favicon.ico" />
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/app/_app/immutable/entry/start.DaT5t4mb.js">
-		<link rel="modulepreload" href="/app/_app/immutable/chunks/CDSotEIi.js">
-		<link rel="modulepreload" href="/app/_app/immutable/entry/app.BU54J-KX.js">
-		<link rel="modulepreload" href="/app/_app/immutable/chunks/CJLNsLCM.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.YeZu_Qts.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D2RLWOqQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DdTWmrnz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BoOk2E0_.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_9x2u64 = {
-						base: "/app",
-						assets: "/app"
+					__sveltekit_1672lpb = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/_app/immutable/entry/start.DaT5t4mb.js"),
-						import("/app/_app/immutable/entry/app.BU54J-KX.js")
+						import("/_app/immutable/entry/start.YeZu_Qts.js"),
+						import("/_app/immutable/entry/app.DdTWmrnz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
