--- a/nim/frontend/src/app.html
+++ b/nim/frontend/src/app.html
@@ -2,9 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Xanthus - Infrastructure Management Platform</title>
+		
+		<!-- Favicons -->
+		<link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		
+		<script src="https://cdn.tailwindcss.com"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
